fix(card) fixes spacing

--- a/src/components/Cards/CardLarge/CardLarge.scss
+++ b/src/components/Cards/CardLarge/CardLarge.scss
@@ -56,7 +56,6 @@ $card-image-height: 330px;
 .card-large__button {
   grid-area: button;
   grid-row: 50px;
-  width: 120px;
   height: 45px;
   margin-right: auto;
   margin-bottom: 35px;
