--- a/src/components/Cards/CardSquare/CardSquare.scss
+++ b/src/components/Cards/CardSquare/CardSquare.scss
@@ -54,7 +54,6 @@ $card-image-height: 330px;
 
 .card-square__button {
   grid-area: button;
-  width: 120px;
   height: 45px;
   margin: 0 auto 35px auto;
   border-style: none;
